0.5 -> 0.6 upgrade - Force score mode option, allowing you to re-enable scores for a specific stage after its scores get locked once you unlock the next stage - Stage directory editor, lets you edit what directories correspond to each stage. This allows you to re-order the stages in original game - Fixed current stage shown as "All stages completed" even if you hadn't completed all the stages - Increased column width on certain list tables